--- a/styles/influencer.css
+++ b/styles/influencer.css
@@ -79,6 +79,8 @@ nav ul li a {
     color: #3A3A3A;
     font-size: 1rem;
     font-weight: 600;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .header-btn {
@@ -103,11 +105,58 @@ nav ul li a {
     align-items: center;
     justify-content: space-between;
     padding: 20px 0;
+    gap: 50px;
 }
 .hr-svg{
     fill: linear-gradient(135deg, rgba(192, 204, 218, 0.10) 0%, rgba(192, 204, 218, 0.60) 50.38%, rgba(192, 204, 218, 0.10) 100%);
 }
 
-.main{
-    background: url("/logos/Walmart.svg");
+/* Responsive style goes from here */
+@media screen and (max-width:576px) {
+    nav,
+    .header-container,
+    .brands-logo
+    {
+        padding: 20px;
+        flex-direction: column;
+        gap:50px;
+    }
+    header ,
+    .brand-icon-container
+    {
+        margin: 0 auto;
+        padding: 0 20px 30px;
+    }
+    .header-info, .header-img, .brands-logo div{
+        width:100%;
+        height: 100%;
+    }
+    .header-img img,
+    .header-img svg,
+    .brands-logo div
+    {
+        width:100%;
+    
+    }
+}
+
+@media screen and (min-width:576px) and (max-width: 992px) {
+    .header-img img,
+    .header-img svg,
+    .brands-logo div,
+    .header-info, .header-img, .brands-logo div
+    {
+        width:100%;
+    
+    }
+    header ,
+    .brand-icon-container
+    {
+        margin: 0 auto;
+        padding: 0 20px 30px;
+    }
+    .header-container {
+        gap:20px;
+        padding: 0 0 30px;
+    }
 }
