--- a/styles/influencer.css
+++ b/styles/influencer.css
@@ -8,13 +8,12 @@
 
 header {
     max-width: 1140px;
-    border: 2px solid red;
     margin: 0 auto;
     padding: 0 120px 70px;
 }
 
 nav {
-    padding: 90px 0 50px;
+    padding: 50px 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -23,8 +22,8 @@ nav {
 .nav-logo {
     color: #3A3A3A;
     font-family: Poppins;
-    font-size: 1.5rem;
-    font-weight: 700;
+    font-size: 2rem;
+    font-weight: 800;
 }
 
 nav ul {
@@ -47,27 +46,33 @@ nav ul li a {
 .header-container {
     display: flex;
     align-items: center;
-    gap:130px;
+    gap: 100px;
     padding: 0 0 70px;
 }
-.header-info, .header-img{
-    width:50%;
+
+.header-info,
+.header-img {
+    width: 100%;
 }
-.header-img{
+
+.header-img {
     position: relative;
 }
-.header-img img{
+
+.header-img img {
     position: absolute;
     top: 50%;
-    left:45%;
-    transform: translate(-50% ,-50%);
+    left: 45%;
+    transform: translate(-50%, -50%);
 }
-.header-img svg{
+
+.header-img svg {
     /* top:0;
     left:0;
     width:100%;
     position: absolute; */
 }
+
 .header-title {
     color: #3A3A3A;
     font-size: 3rem;
@@ -76,7 +81,7 @@ nav ul li a {
 }
 
 .header-description {
-    color: #3A3A3A;
+    color: #696767;
     font-size: 1rem;
     font-weight: 600;
     margin-top: 20px;
@@ -84,79 +89,304 @@ nav ul li a {
 }
 
 .header-btn {
-    color:rgb(230, 235, 237);
+    color: rgb(230, 235, 237);
     padding: 10px 20px;
     border-radius: 41px;
     background: #E02C6D;
-    border:0;
+    border: 0;
 }
+
 /* header ends here */
 
 /* brands section */
-.brand-icon-container{
-    padding: 0 165px;
+.brand-icon-container {
+    padding: 0 150px;
     margin: 0 auto;
 }
-.brand-icon-container svg{
+
+.brand-icon-container svg {
     width: 100%;
 }
-.brands-logo{
+
+.brands-logo {
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 20px 0;
+    gap: 10px;
+}
+
+.brands-logo svg {
+    width: 100%;
+    margin-right: -30px;
+}
+
+.hr-svg {
+    fill: linear-gradient(135deg, rgba(192, 204, 218, 0.10) 0%, rgba(192, 204, 218, 0.60) 50.38%, rgba(192, 204, 218, 0.10) 100%);
+}
+
+/* Main section Starts from here */
+main {
+    max-width: 1140px;
+    margin: 0 auto 70px;
+
+}
+
+.main-container {
+    padding-left: 150px;
+    padding-right: 150px;
+
+}
+
+.collection-title {
+    margin-bottom: 50px;
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
+/* Card Section */
+.card-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 20px;
+}
+
+.card img {
+    width: 100%;
+}
+
+.card {
+    padding: 10px;
+    background-color: white;
+    box-shadow: 0px 0px 20px rgb(162, 157, 157);
+    border-radius: 8px;
+
+}
+
+.name {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: #2c2a2a;
+    font-weight: 700;
+}
+
+.price {
+    margin-bottom: 10px;
+    color: #515050;
+    font-weight: 700;
+}
+
+.description {
+    color: #656363;
+    font-size: 0.7rem;
+    line-height: 20px;
+    font-weight: 400;
+}
+
+.see-more {
+    text-align: right;
+    margin: 20px 0;
+}
+
+.see-more a {
+    color: #E02C6D;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+/* Feature section */
+.feature-section {
+    padding: 0 130px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     gap: 50px;
 }
-.hr-svg{
-    fill: linear-gradient(135deg, rgba(192, 204, 218, 0.10) 0%, rgba(192, 204, 218, 0.60) 50.38%, rgba(192, 204, 218, 0.10) 100%);
+
+.feature-title {
+    color: #2c2a2a;
+    font-size: 1.5rem;
+    font-weight: 900;
+}
+
+.feature-description {
+    color: #515050;
+    font-size: .8rem;
+    font-weight: 600;
+    line-height: 20px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.feature-img {
+    width: 60%;
+}
+
+.feature-img img {
+    width: 100%;
+}
+
+.feature-info {
+    width: 100%;
+}
+
+.feature-btn {
+    color: rgb(230, 235, 237);
+    padding: 10px 20px;
+    background: #E02C6D;
+    border: 0;
+}
+
+/* Footer section */
+footer{
+    width:100%;
+    background-color: rgb(17, 17, 48);
+    text-align: center;
+}
+.footer-content{
+    padding: 50px 0;
+}
+.footer-title{
+    color:rgb(220, 212, 212);
+    font-size: 1.2rem;
+}
+.footer-description{
+    margin: 10px 0;
+    color:rgb(201, 191, 191);
+    font-size: .6rem;
+
 }
 
 /* Responsive style goes from here */
 @media screen and (max-width:576px) {
+
     nav,
     .header-container,
-    .brands-logo
-    {
+    .brands-logo {
         padding: 20px;
         flex-direction: column;
-        gap:50px;
+        gap: 50px;
     }
-    header ,
-    .brand-icon-container
-    {
+
+    header,
+    .brand-icon-container {
         margin: 0 auto;
         padding: 0 20px 30px;
     }
-    .header-info, .header-img, .brands-logo div{
-        width:100%;
+
+    .header-info,
+    .header-img,
+    .brands-logo div {
+        width: 100%;
         height: 100%;
     }
+
+    .header-info {
+        text-align: center;
+    }
+
     .header-img img,
     .header-img svg,
-    .brands-logo div
-    {
-        width:100%;
+    .brands-logo div {
+        width: 100%;
+
+    }
+
+    .brands-logo svg {
+        width: 100%;
+        margin-right: 0;
+        margin-left: 0;
+    }
+
+    .card-container {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 50px;
+    }
+
+    .main-container {
+        padding: 0 50px;
+    }
+
+    .feature-section {
+        padding: 0 20px;
+        flex-direction: column;
+        gap: 50px;
+    }
+    .feature-img {
+        width: 100%;
+    }
+    .feature-info {
+        text-align: center;
+    }
+    /* footer section  */
+    .footer-description{
+        margin: 0;
+        font-size: .6rem;
     
     }
 }
 
 @media screen and (min-width:576px) and (max-width: 992px) {
+
     .header-img img,
     .header-img svg,
     .brands-logo div,
-    .header-info, .header-img, .brands-logo div
-    {
-        width:100%;
-    
+    .header-info,
+    .header-img,
+    .brands-logo div {
+        width: 100%;
+
     }
-    header ,
-    .brand-icon-container
-    {
+
+    header,
+    .brand-icon-container {
         margin: 0 auto;
         padding: 0 20px 30px;
     }
+
     .header-container {
-        gap:20px;
+        gap: 20px;
         padding: 0 0 30px;
     }
+
+    /* main section style here */
+    .card-container {
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+    }
+
+    .main-container {
+        padding: 0 20px;
+    }
+
+    /* feature section */
+    .feature-img {
+        width: 100%;
+    }
+
+    .feature-title {
+        font-size: 1rem;
+    }
+
+    .feature-description {
+        font-size: .8rem;
+        margin-top: 10px;
+        margin-bottom: 5px;
+    }
+
+    .feature-section {
+        padding: 0 50px;
+        gap: 50px;
+    }
+    /* footer section */
+    .footer-description{
+        margin: 5px 0;
+        font-size: .6rem;
+    }
+
 }
+
+/* Finished Here. This website is responsive for all kinds of device */
